# fakecertgen

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  docker-compose.yml  go.mod
.github/workflows/: workflow.yml
cmd/fake-certgen/: BUILD.bazel  main.go
pkg/cert/: BUILD.bazel  ca.go  cert.go  renew.go
pkg/handlers/: BUILD.bazel  cert.go  home.go  renew.go
