load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fake-certgen_lib",
    srcs = ["main.go"],
    importpath = "github.com/kruemelmann/fake-certgen/cmd/fake-certgen",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cert",
        "//pkg/handlers",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_binary(
    name = "fake-certgen",
    embed = [":fake-certgen_lib"],
    visibility = ["//visibility:public"],
)
