load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fake-certgen_lib",
    srcs = ["main.go"],
    importpath = "github.com/kruemelmann/fake-certgen/cmd/fake-certgen",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cert",
        "//pkg/handlers",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_binary(
    name = "fake-certgen",
    embed = [":fake-certgen_lib"],
    visibility = ["//visibility:public"],
)

### cross compile for the docker container
go_binary(
    name = "crosslinux_fake-certgen",
    embed = [":fake-certgen_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

container_image(
    name = "fakecertgen",
    base = "@alpine_linux_amd64//image",
    cmd="/crosslinux_fake-certgen",
    files = [
        "//cmd/fake-certgen:crosslinux_fake-certgen",
    ],
    repository = "nasenbaerchen",
)

container_push(
    name = "release-latest",
    image = ":fakecertgen",
    registry = "index.docker.io",
    repository = "nasenbaerchen/fakecertgen",
    tag = "latest",
    skip_unchanged_digest = True,
    format = "Docker",
)
